[gd_scene load_steps=4 format=3 uid="uid://d138lauggmjjj"]

[ext_resource type="Script" path="res://Game/Pause/PauseMenu.gd" id="1_8a2rq"]
[ext_resource type="PackedScene" uid="uid://i50dynnx1exd" path="res://Game/Pause/OptionsMenu2.tscn" id="2_7ovbo"]
[ext_resource type="Theme" uid="uid://73ldd1e4lpne" path="res://themes/GUI.tres" id="3_umvxt"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
script = ExtResource("1_8a2rq")

[node name="OptionsMenu2" parent="." instance=ExtResource("2_7ovbo")]
layout_mode = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333333
anchor_top = 0.203704
anchor_right = 0.666667
anchor_bottom = 0.796296
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 0.25625
metadata/_edit_use_anchors_ = true

[node name="Pause Label" type="Label" parent="Panel/MarginContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("3_umvxt")
theme_override_font_sizes/font_size = 40
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.25625
anchor_right = 0.9
anchor_bottom = 0.90625
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Resume" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_umvxt")
text = "Resume"

[node name="Options" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_umvxt")
text = "Options"

[node name="Restart" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_umvxt")
text = "Restart"

[node name="Back to Main" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_umvxt")
text = "Back to Main"

[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Back to Main" to="." method="_on_back_to_main_pressed"]
